# cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.py  build.sh  compile_commands.json  imgui.ini  package.json
include/: config.hpp
resources/: resources.qrc
scripts/: build.js
src/: gui.cpp  index.ts  main.cpp  native.d.ts
src/native/: addon.cpp  addon.hpp
src/reader/: binary.cpp  binary.hpp
src/threading/: pool.cpp  pool.hpp
src/ui/: gui.cpp  gui.hpp  tab.cpp  tab.hpp  tabs.cpp  tabs.hpp  window.cpp  window.hpp
src/ui/tabs/: test.cpp  test.hpp
